🎃 👾 background color utility fix & whitespace cleaning

--- a/css/main.css
+++ b/css/main.css
@@ -227,10 +227,10 @@ a {
   margin-right: -1rem; }
 
 .u-bg-black {
-  color: #28303e; }
+  background-color: #28303e; }
 
 .u-bg-white {
-  color: #fefdfc; }
+  background-color: #fefdfc; }
 
 .u-black {
   color: #28303e; }
